--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "typescript": "^5.4.0"
   },
   "dependencies": {
-    "@openrouter/sdk": "^0.4.0"
+    "@openrouter/sdk": "^0.4.0",
+    "openai": "^6.16.0",
+    "openapi": "^1.0.1"
   }
 }
