--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@openai/agents": "^0.4.3",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@openrouter/sdk": "^0.5.1",
     "openai": "^6.16.0",
     "openapi": "^1.0.0"
