--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.4.0"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.52.0",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@openai/agents": "^0.4.3",
     "@openrouter/sdk": "^0.5.1",
     "openai": "^6.16.0",
