--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target bun",
     "start": "bun run dist/index.js",
-    "compile": "bun build src/index.ts --compile --outfile tony"
+    "compile": "bun build src/index.ts --compile --outfile tony",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "^1.3.8",
